# ggt-t0-trader

./: README.md  pyproject.toml
ggt_t0_trader/: __init__.py  __main__.py  app.py  backtest.py  data_loader.py  demo.py  models.py  reporting.py  strategy.py
tests/: test_backtest.py  test_data_loader.py  test_strategy.py
