[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ggt-t0-trader"
version = "0.1.0"
description = "港股通T0动量策略回测与可视化系统"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GitHub Copilot Coding Agent" }]

[tool.setuptools]
packages = ["ggt_t0_trader"]
